<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/UsbongDefaultParentLayout"
    >
    <TextView
		style="@style/UsbongInstructionsTextView"
    	android:text="@string/file_chooser_textfield_text"
    	android:layout_above="@+id/file_chooser_button"
    	android:layout_centerHorizontal="true"/>		
    
    <Button
    	android:id="@+id/file_chooser_button"
    	style="@style/UsbongButton"	
    	android:text="@string/file_chooser_button_text"
    	android:layout_centerHorizontal="true"
    	android:layout_centerVertical="true"		
    />    
    <ImageView 
        android:id="@+id/powered_by_usbong_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/powered_by_usbong_logov2"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/powered_by_usbong_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
    />    
</RelativeLayout>
